Updated return of functions; Updated Swagger docs
